little fixes on mobile

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body{
     background-color: #ffffff;
     font-family: "Assistant", sans-serif;
 }
-
+ 
 .grid-container {
     display: grid;
     grid-template-columns: auto 70% auto;
@@ -474,15 +474,17 @@ ul > li  > a{
           border-radius: 50%;
           padding: 0;
           margin-top:0rem;
-          margin-left:0.5rem;
+          margin-left:1rem;
         }
         .text > h3{
           visibility: hidden;
          }
          .text>p{
-          margin-left: 0.2rem;
-          padding:0;
-          font-size: 1.2rem;
+            margin-left: 0.2rem;
+            padding:0;
+            font-size: 1.4rem;
+            width:100%;
+            padding: 0;
          }
          
         
